tests/sumo/errors/invalid_color_name/errors.sumo
Error: Attribute 'color' in definition of vType 'color_test' Invalid color definition 'mauve'.
Quitting (on error).
